2011-11-07 Markus Enzenberger
	* Update German translation.

2010-12-22 Graeme Gott <graeme@gottcode.org>
	* Add changing the program language.
	* Add rotating pieces with any mouse button.

2010-09-24 Adrián Cereto Massagué <ssorgatem@gmail.com>
	* Add translations.

2009-12-30 Graeme Gott <graeme@gottcode.org>
	* Remove unnecessary QtSvg dependency.

2009-04-06 Graeme Gott <graeme@gottcode.org>
	* Add program icon.

2009-04-05 Graeme Gott <graeme@gottcode.org>
	* Add program name.
	* Add window class.
	* Remember current game across runs.
	* Detect when a game has finished.

2009-04-04 Graeme Gott <graeme@gottcode.org>
	* Animate piece movement.

2009-04-03 Graeme Gott <graeme@gottcode.org>
	* Enable moving pieces.
	* Add board class.
	* Animate piece rotation.

2009-04-02 Graeme Gott <graeme@gottcode.org>
	* Add piece graphics.

2009-03-21 Graeme Gott <graeme@gottcode.org>
	* Add puzzle class.
	* Add piece class.