@@ -1,0 +1,151 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE TS>
+<TS version="2.0" language="cs_CZ" sourcelanguage="en">
+<context>
+    <name>Board</name>
+    <message>
+        <location filename="../src/board.cpp" line="45"/>
+        <source>Question</source>
+        <translation>Otázka</translation>
+    </message>
+    <message>
+        <location filename="../src/board.cpp" line="45"/>
+        <source>Abort current game?</source>
+        <translation>Přerušitnynější hru?</translation>
+    </message>
+</context>
+<context>
+    <name>LocaleDialog</name>
+    <message>
+        <location filename="../src/locale_dialog.cpp" line="48"/>
+        <source>Select application language:</source>
+        <translation>Vybrat jazyk programu:</translation>
+    </message>
+    <message>
+        <location filename="../src/locale_dialog.cpp" line="53"/>
+        <source>Catalan</source>
+        <translation>Katalánština</translation>
+    </message>
+    <message>
+        <location filename="../src/locale_dialog.cpp" line="54"/>
+        <source>German</source>
+        <translation>Němčina</translation>
+    </message>
+    <message>
+        <location filename="../src/locale_dialog.cpp" line="55"/>
+        <source>American English</source>
+        <translation>Americká angličtina</translation>
+    </message>
+    <message>
+        <location filename="../src/locale_dialog.cpp" line="56"/>
+        <source>Spanish</source>
+        <translation>Španělština</translation>
+    </message>
+    <message>
+        <location filename="../src/locale_dialog.cpp" line="57"/>
+        <source>French</source>
+        <translation>Francouzština</translation>
+    </message>
+    <message>
+        <location filename="../src/locale_dialog.cpp" line="152"/>
+        <source>Note</source>
+        <translation>Poznámka</translation>
+    </message>
+    <message>
+        <location filename="../src/locale_dialog.cpp" line="152"/>
+        <source>Please restart this application for the change in language to take effect.</source>
+        <translation>Spusťte, prosím, tento program znovu, aby se změna jazyka projevila..</translation>
+    </message>
+</context>
+<context>
+    <name>Puzzle</name>
+    <message>
+        <location filename="../src/puzzle.cpp" line="162"/>
+        <source>Success</source>
+        <translation>Úspěch</translation>
+    </message>
+    <message>
+        <location filename="../src/puzzle.cpp" line="204"/>
+        <source>Sorry</source>
+        <translation>Promiňte</translation>
+    </message>
+    <message>
+        <location filename="../src/puzzle.cpp" line="204"/>
+        <source>Unable to load previous game. Starting a new game.</source>
+        <translation>Předchozí hru se nepodařilo nahrát. Spouští se nová hra.</translation>
+    </message>
+</context>
+<context>
+    <name>Window</name>
+    <message>
+        <location filename="../src/window.cpp" line="34"/>
+        <source>Hexalate</source>
+        <translation>Hexalate</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="41"/>
+        <source>&amp;Game</source>
+        <translation>&amp;Hra</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="42"/>
+        <source>&amp;New</source>
+        <translation>&amp;Nová</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="42"/>
+        <source>Ctrl+N</source>
+        <translation>Ctrl+N</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="44"/>
+        <source>&amp;Quit</source>
+        <translation>&amp;Ukončit</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="44"/>
+        <source>Ctrl+Q</source>
+        <translation>Ctrl+Q</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="46"/>
+        <source>&amp;Settings</source>
+        <translation>&amp;Nastavení</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="47"/>
+        <source>Application &amp;Language...</source>
+        <translation>&amp;Jazyk programu...</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="49"/>
+        <source>&amp;Help</source>
+        <translation>&amp;Nápověda</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="50"/>
+        <source>&amp;About</source>
+        <translation>&amp;O programu</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="51"/>
+        <source>About &amp;Qt</source>
+        <translation>O &amp;Qt</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="74"/>
+        <source>About Hexalate</source>
+        <translation>O Hexalate</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="76"/>
+        <source>A color matching game</source>
+        <translation>Hra o shodě barev</translation>
+    </message>
+    <message>
+        <location filename="../src/window.cpp" line="77"/>
+        <source>Copyright &amp;copy; 2009-2010 Graeme Gott</source>
+        <translation>Autorské právo &amp;copy; 2009-2010 Graeme Gott</translation>
+    </message>
+</context>
+</TS>
