@@ -1,3 +1,6 @@
+2011-11-11 Pavel Fric
+	* Add Czech translation.
+
 2011-11-07 Markus Enzenberger
 	* Update German translation.
 
